--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <script>
 function butotnClick(){
              str= zero.value;
-             str = str.replace(/(.)/g, "$1​");
+             str = str.replace(/(.)/g, "$1‌");
              complete.innerText = str;
 }
 
